--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,74 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anime-Limk</title>
-    <link
-    rel="stylesheet"
-    href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"
-/>
-    <link rel="stylesheet" href="../../styles/main.css" />
-    <link rel="stylesheet" type="text/css" href="slick-1.8.1/slick/slick.css" />
-    <link rel="stylesheet" type="text/css" href="slick-1.8.1/slick/slick-theme.css" />
-</head>
-<body>
-    <%- include('../layouts/nav') %>
-    <section class="banner container">
-        <section id="banner" class="padding">
-            <% if(localUsername != null){%>
-            <p class="bannerText">Welcome Back</p>
-            <p class="smallerBannerText">Go to your Anime Collection</p>
-            <a href="/user_list" class="indexButtons">User panel</a>
-            <%}else {%>
-            <p class="bannerText">Sign up for free</p>
-            <a href="/login" class="indexButtons">SIGN UP</a>
-            <% } %>
-        </section>
-        <!-- <section class="d-flex justify-around ">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Anime-Limk</title>
+        <link
+            rel="stylesheet"
+            href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"
+        />
+        <link rel="stylesheet" href="../../styles/main.css" />
+        <link
+            rel="stylesheet"
+            type="text/css"
+            href="slick-1.8.1/slick/slick.css"
+        />
+        <link
+            rel="stylesheet"
+            type="text/css"
+            href="slick-1.8.1/slick/slick-theme.css"
+        />
+    </head>
+    <body>
+        <%- include('../layouts/nav') %>
+        <section class="banner container">
+            <section id="banner" class="padding">
+                <% if(localUsername != null){%>
+                <p class="bannerText">Welcome Back</p>
+                <p class="smallerBannerText">Go to your Anime Collection</p>
+                <a href="/user_list" class="indexButtons">User panel</a>
+                <%}else {%>
+                <p class="bannerText">Sign up for free</p>
+                <a href="/login" class="indexButtons">SIGN UP</a>
+                <% } %>
+            </section>
+            <!-- <section class="d-flex justify-around ">
             <div class="feature">SEARCH for animes</div>
             <div class="feature">KEEP TRACK of your favourite animes</div>
             <div class="feature">'PLACEHOLDER'</div>
         </section> -->
-    </section>
-    <main class="colorback">
-        <div class="container">
-            <hr>
-            <p class="bannerText">Seasonal Anime</p>
-            <section id='seasonal' class="row padding" >
-                <% animeArr.forEach((item)=>{%>
-                <div>
-                    <form id="searched-form" action="/details/<%= item.id%>" class="col">
-                        <button type="submit" class="detailsBtn">
-                            <img src="<%= item.image_url%>" style="max-width: 100%;">
-                            <h2><%= item.title%></h2>
-                        </button>
-                    </form>
+        </section>
+        <main class="colorback">
+            <div class="container">
+                <hr />
+                <p class="bannerText">Seasonal Anime</p>
+                <section id="seasonal" class="row padding">
+                    <% animeArr.forEach((item)=>{%>
+                    <div>
+                        <form
+                            id="searched-form"
+                            action="/details/<%= item.id%>"
+                            class="col"
+                        >
+                            <button type="submit" class="detailsBtn">
+                                <img
+                                    src="<%= item.image_url%>"
+                                    style="max-width: 100%"
+                                />
+                                <h2><%= item.title%></h2>
+                            </button>
+                        </form>
+                    </div>
+                    <% })%>
+                </section>
+                <img
+                    src="https://kingstonhsc.ca/kgh-journey/images/icons/Section2-Quote-PinkEnd.png"
+                    class="rotate quote"
+                />
+                <section class="quoteSec padding">
+                    <p><%= quote.quote%></p>
+                    <p>
+                        <span>
+                            - <%= quote.character%> <br />
+                            <%= quote.anime%></span
+                        >
+                    </p>
+                </section>
+                <div class="quoteClose">
+                    <img
+                        src="https://kingstonhsc.ca/kgh-journey/images/icons/Section2-Quote-PinkEnd.png"
+                        class="quote"
+                    />
                 </div>
-                <% })%>
-            </section>
-            <img src="https://kingstonhsc.ca/kgh-journey/images/icons/Section2-Quote-PinkEnd.png" class="rotate quote">
-            <section class="quoteSec padding">
-                <p><%= quote.quote%></p>
-                <p><span> - <%= quote.character%> <br> <%= quote.anime%></span></p>
-            </section>
-            <div class="quoteClose">
-                <img src="https://kingstonhsc.ca/kgh-journey/images/icons/Section2-Quote-PinkEnd.png" class="quote">
+                <hr />
+                <p class="bannerText">Top Anime</p>
+                <section id="topAnimes" class="padding">
+                    <canvas id="topAnimesChart" width="800" height="450">
+                    </canvas>
+                </section>
             </div>
-            <hr>
-            <p class="bannerText">Top Anime</p>
-            <section id="topAnimes" class="padding">
-                <canvas id="topAnimesChart" width="800" height="450">
-                </canvas>
-            </section>
-        </div>
-    </main>
-    <%- include('../layouts/footer') %>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
-    <script src="./js/indexSlider.js"></script>
-    <script>
-    </script>
-</body>
+        </main>
+        <%- include('../layouts/footer') %>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <script
+            type="text/javascript"
+            src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
+        ></script>
+        <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+        <script src="./js/indexSlider.js"></script>
+        <script></script>
+    </body>
 </html>
