--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -20,7 +20,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com/in/mohammad-eshtaiwi/">
+                        <a href="https://www.linkedin.com/in/dinaAlsaid/">
                             Dina Alsaid
                         </a>
                     </li>
@@ -44,3 +44,6 @@
         </section> -->
     </div>
 </footer>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="../../js/app.js"></script>
+
