--- a/views/pages/details.ejs
+++ b/views/pages/details.ejs
@@ -88,6 +88,7 @@
             </section>
         </article>
     </main>
+    <%- include('../layouts/notification') %>
     <%- include('../layouts/footer') %>
 </body>
 
