--- a/public/slick-1.8.1/slick/slick-theme.css
+++ b/public/slick-1.8.1/slick/slick-theme.css
@@ -71,7 +71,7 @@
     line-height: 1;
 
     opacity: .75;
-    color: grey;
+    color: #e85d6f;
 
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -200,6 +200,6 @@
 .slick-dots li.slick-active button:before
 {
     opacity: .75;
-    color: black;
+    color: #e85d6f;
 }
 
