--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -28,13 +28,12 @@
             </div>
             <div class="about-us">
                 <h3 style="margin-bottom: 13px;
-                padding-top: 10px;">Lorem, ipsum dolor.</h3>
+                padding-top: 10px;">About Animatic.</h3>
                 <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing
-                    elit. Cum sapiente deleniti perferendis corporis
-                    maxime iste eos minus. Eveniet laudantium odit
-                    sapiente consequuntur mollitia commodi explicabo.
-                    Culpa unde nesciunt minima eos?
+                    Animatic is your one stop for anime news and tracking. We allow you
+                    to search for animes and be able to look for random ones as well.
+                    You can sign up today for free and add shows to your list to track and 
+                    compare with your friends.
                 </p>
             </div>
         </section>
