--- a/views/pages/random-animes.ejs
+++ b/views/pages/random-animes.ejs
@@ -28,7 +28,7 @@
                 <p class="episodes"></p>
                 <p class="rating"></p>
             </div>
-            <button class="generate-anime btn">generate</button>
+            <button class="generate-anime btn">Generate</button>
         </section>
     </main>
     <%- include('../layouts/notification') %>
