--- a/views/layouts/nav.ejs
+++ b/views/layouts/nav.ejs
@@ -14,15 +14,15 @@
                 <li><a href="/search">Search</a></li>
                 <% if (localStorage.getItem("userid")!==null) { %>
 
-                <li><a href="/user_list">your list</a></li>
-                <li><a href="/logout">log out</a></li>
+                <li><a href="/user_list">User Panel</a></li>
+                <li><a href="/logout">Logout</a></li>
                 <% }else{ %>
 
-                <li><a href="/login">login</a></li>
+                <li><a href="/login">Login</a></li>
                 <%} %>
             </ul>
             <form action="./search" class="d-flex align-center" method="get">
-                <input type="text" placeholder="search" name="search" />
+                <input type="text" placeholder="Search" name="search" />
                 <button type="submit">
                     <i class="fa fa-search"></i>
                 </button>
