--- a/views/pages/userlist.ejs
+++ b/views/pages/userlist.ejs
@@ -29,20 +29,6 @@
         </div>
         <!-- Password changer form -->
 
-        <!-- <div class="change-password">
-        <div class="error-message">
-            <p>message</p>
-        </div>
-        <section>
-            <h2>Change your password</h2>
-            <form action="/passwordchange/<% localStorage.getItem('userid')%>?_method=put" method="POST">
-                <input required type="password" name="currentPassword" placeholder="***********" minlength="6">
-                <input required type="password" name="newPassword" placeholder="***********" minlength="6">
-                <input required type="password" name="newPasswordValidate" placeholder="***********" minlength="6">
-                <input required type="submit">
-            </form>
-        </section>
-    </div>  -->
 
         <!-- --- favourites --- -->
         <section class="favourites row" id="faveSec">
@@ -169,6 +155,17 @@
             <% } %>
         </section>
         <!-- xxx following xxx -->
+        <div class="change-password ">
+            <section>
+                <h2>Change your password</h2>
+                <form action="/passwordchange/<%=localUserId[0]%>?_method=put" method="POST">
+                    <input required type="password" name="currentPassword" placeholder="Current Password" minlength="6">
+                    <input required type="password" name="newPassword" placeholder="New Password" minlength="6">
+                    <input required type="password" name="newPasswordValidate" placeholder="New Password Validate" minlength="6">
+                    <input required type="submit">
+                </form>
+            </section>
+        </div> 
     </main>
     <%- include('../layouts/notification') %>
     <%- include('../layouts/footer') %>
